Alterando botão e inserindo newLamp

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Acenda a luz</h1>
+        <h1>Lâmpada em javascrip</h1>
     </header>
     <main>
         <div>
             <img src="./img/desligada.jpg" alt="Lâmpada" id='lamp'>
         </div>
         <div>
-            <button id='turnOn'>Ligar</button>
-            <button id='turnOff'>Desligar</button>
+            <button id='turnOnOff'>Ligar</button>            
             <button id='newLamp'>Nova Lâmpada</button>
         </div>
     </main>
